force-app/main/default/objects/SpecifyAgency__c/SpecifyAgency__c.object-meta.xml
<CustomObject>
    <label>指定不動産会社</label>
    <nameField>
        <label>指定不動産会社名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>