force-app/main/default/objects/SpecifyAgency__c/fields/CorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定</label>
    <referenceTo>CorporateHousingRegulation__c</referenceTo>
    <relationshipLabel>指定不動産会社</relationshipLabel>
    <relationshipName>SpecifyAgency</relationshipName>
    <type>Lookup</type>
</CustomField>