force-app/main/default/objects/SpecifyAgency__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>地区</label>
    <referenceTo>District__c</referenceTo>
    <relationshipLabel>指定不動産会社</relationshipLabel>
    <relationshipName>SpecifyAgency</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>