force-app/main/default/objects/SpecifyAgency__c/fields/IsAllCity__c.field-meta.xml
<CustomField>
    <fullName>IsAllCity__c</fullName>
    <formula>District__r.IsAllCity__c</formula>
    <label>都道府県全域</label>
    <type>Checkbox</type>
</CustomField>