force-app/main/default/objects/SpecifyAgency__c/fields/IsMediation__c.field-meta.xml
<CustomField>
    <fullName>IsMediation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>斡旋対象外</label>
    <type>Checkbox</type>
</CustomField>