force-app/main/default/objects/SpecifyAgency__c/fields/RealEstateAgency__c.field-meta.xml
<CustomField>
    <fullName>RealEstateAgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>不動産仲介会社</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>指定不動産会社</relationshipLabel>
    <relationshipName>RealEstateSelectionRuleAccountRelation10</relationshipName>
    <type>Lookup</type>
</CustomField>