force-app/main/default/objects/SpecifyAgency__c/fields/SpecifyAgencyId__c.field-meta.xml
<CustomField>
    <fullName>SpecifyAgencyId__c</fullName>
    <externalId>true</externalId>
    <label>指定不動産会社ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>