force-app/main/default/objects/SpecifyAgency__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <formula>TEXT( District__r.State__c )</formula>
    <label>都道府県</label>
    <type>Text</type>
</CustomField>